Refactor respondent handling in DocumentHelper to exclude first respondent and improve readability (#2680)